[tool.poetry]
name = "kurator-balancer"
version = "0.1.0"
description = "A tool for balancing a game that doesn't exist (yet)"
authors = ["Laurapaws <laura404m@gmail.com>"]
readme = "README.md"
packages = [{include = "kurator_balancer"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
pyqt5 = "^5.15.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
